manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "fbmondayaks-c6a7"
    labels:
        app: "fbmondayaks-c6a7"
spec:
    type: LoadBalancer
    ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
    selector:
        app: "fbmondayaks-c6a7"
